# medisolveai-kafka

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
.claude/: versioning.md
.github/workflows/: release.yml  test.yml
docs/events/: bay.md
medisolveai_kafka/: __init__.py
medisolveai_kafka/broker/: __init__.py  consumer.py  producer.py
medisolveai_kafka/core/: __init__.py  base.py  config.py  exceptions.py
medisolveai_kafka/events/bay/v1/: dispatch.py  low_stock.py  receive.py
medisolveai_kafka/example/: .env.example  .mcp.json  Dockerfile  app.py  docker-compose.example.yml
medisolveai_kafka/mcp/: server.py
tests/broker/: test_consumer.py  test_producer.py
tests/core/: test_base.py  test_config.py  test_exceptions.py
tests/events/bay/v1/: test_dispatch.py  test_low_stock.py  test_receive.py
tests/mcp/: test_server.py
